# obsidenc

./: .gitignore  ANALYSIS.md  Cargo.toml  LICENSE  README.md  run.bat  run_gui.bat
.github/workflows/: windows-release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decrypt.rs
gui/scripts/: build-sidecar.ps1  dev-server.js  dev.ps1
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  obsidenc_ipc.rs
gui/ui/: app.js  index.html  styles.css
src/: aead.rs  cli.rs  commands.rs  error.rs  format.rs  kdf.rs  lib.rs  main.rs  securemem.rs  vaulttar.rs
tests/: roundtrip.rs
