[package]
name = "obsidenc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[target.'cfg(not(windows))'.dependencies]
libfuzzer-sys = "0.4"

[dependencies.obsidenc]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decrypt"
path = "fuzz_targets/fuzz_decrypt.rs"
test = false
doc = false
bench = false
